.provarCaches/00D410000011HE0EAM/objects/rstkf__glfinstmt1__c.object
<CustomObject>
    <description>glfinstmt1__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glfinstmt1_glfstmplt2__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  TEXT( rstkf__glfinstmt1_report__c )</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glfinstmt1_glfstmplt2__r.Name &amp; &apos;-Report &apos; &amp;  TEXT( rstkf__glfinstmt1_report__c ) &amp; &apos;-&apos; &amp;  rstkf__glfinstmt1_runtimedescr__c</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt1_createdatetime__c</fullName>
        <label>Date/Time Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt1_date__c</fullName>
        <label>Report Run On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt1_gldiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipName>glfinstmt1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt1_glfstmplt2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Statement - Variant Header</label>
        <referenceTo>rstkf__glfstmplt2__c</referenceTo>
        <relationshipName>glfinstmt1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt1_glproj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipName>glfinstmt1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt1_glyear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipName>glfinstmt1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt1_period__c</fullName>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt1_report__c</fullName>
        <label>Report Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt1_reportdate__c</fullName>
        <label>Date of Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt1_runtimedescr__c</fullName>
        <label>Runtime Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt1_status__c</fullName>
        <label>Report Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>To be Discarded</fullName>
                </value>
                <value>
                    <fullName>To be Preserved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt1_syusr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Report Run By</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipName>glfinstmt1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial Report Data - Top Level</label>
    <listViews>
        <fullName>rstkf__RS_Financial_Statement_Data_Top_Levels</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfinstmt1_glfstmplt2__c</columns>
        <columns>rstkf__glfinstmt1_runtimedescr__c</columns>
        <columns>rstkf__glfinstmt1_glyear__c</columns>
        <columns>rstkf__glfinstmt1_period__c</columns>
        <columns>rstkf__glfinstmt1_status__c</columns>
        <columns>rstkf__glfinstmt1_report__c</columns>
        <columns>rstkf__glfinstmt1_reportdate__c</columns>
        <columns>rstkf__glfinstmt1_date__c</columns>
        <columns>rstkf__glfinstmt1_syusr__c</columns>
        <columns>rstkf__glfinstmt1_gldiv__c</columns>
        <columns>rstkf__glfinstmt1_glproj__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>rstkf__glfinstmt1_createdatetime__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Financial Statement Data - Top Levels</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Report Data - Top Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>